--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "negotiator": "^0.6.3",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-intl": "^6.6.8",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
@@ -22,6 +24,7 @@
     "swiper": "^11.1.3"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
