--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cookie": "^0.6.0",
+    "jose": "^5.4.0",
+    "mongoose": "^8.4.1",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
@@ -24,6 +29,7 @@
     "swiper": "^11.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
