--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "accessibility": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cookie": "^0.6.0",
